out/old/manifests/passbolt-v4/StatefulSet.mysql.yaml
metadata:
  name: mysql
  namespace: passbolt-v4
  labels:
    app.kubernetes.io/instance: passbolt-v4
  annotations: {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: <COMPANY>-<DOMAIN_607>/passbolt/mysql:5.6
        ports:
        - name: mysql
          containerPort: 3306
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: mysql-pv
          mountPath: /var/lib/mysql
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: registrypullsecret
      schedulerName: default-scheduler
  volumeClaimTemplates:
  - kind: PersistentVolumeClaim
    apiVersion: v1
    metadata:
      name: mysql-pv
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 50Gi
      storageClassName: ceph-block-replica-2
      volumeMode: Filesystem
  serviceName: mysql
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
apiVersion: apps/v1
kind: StatefulSet
