out/old/manifests/passbolt-v4/StatefulSet.passbolt.yaml
metadata:
  name: passbolt
  namespace: passbolt-v4
  labels:
    app: passbolt
    app.kubernetes.io/instance: passbolt-v4
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"passbolt-v4:passbolt-svc","ingressName":"passbolt-v4:passbolt-v4-ingress","hostname":"passboltv4.<COMPANY><DOMAIN_14>","path":"/","allNodes":false}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passbolt
  template:
    metadata:
      labels:
        app: passbolt
    spec:
      containers:
      - name: passbolt
        image: artifactory.<COMPANY><DOMAIN_14>:30807/docker-local/passbolt/prd:1
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: passbolt-pv
          mountPath: /usr/share/php/passbolt/webroot/img/public
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: secret-registry-image
      schedulerName: default-scheduler
  volumeClaimTemplates:
  - kind: PersistentVolumeClaim
    apiVersion: v1
    metadata:
      name: passbolt-pv
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
      storageClassName: ceph-block-replica-2
      volumeMode: Filesystem
  serviceName: passbolt
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
apiVersion: apps/v1
kind: StatefulSet
