out/old/manifests/passbolt-v4/Service.mysql.yaml
metadata:
  name: mysql
  namespace: passbolt-v4
  labels:
    app: mysql
    app.kubernetes.io/instance: passbolt-v4
  annotations: {}
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: mysql
  clusterIP: <IP_96>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
