out/old/manifests/passbolt-v4/Ingress.passbolt-v4-ingress.yaml
metadata:
  name: passbolt-v4-ingress
  namespace: passbolt-v4
  labels:
    app: passbolt
    version: v4
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"passbolt-v4:passbolt-svc","ingressName":"passbolt-v4:passbolt-v4-ingress","hostname":"passboltv4.<COMPANY><DOMAIN_14>","path":"/","allNodes":false}]'
    ingress.kubernetes.io/app-root: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
  rules:
  - host: passboltv4.<COMPANY><DOMAIN_14>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: passbolt-svc
            port:
              number: 6831
apiVersion: <DOMAIN_775>/v1
kind: Ingress
